# daily_news

./: .gitignore  LICENSE  Procfile  content.py  mail.py  manage.py  news.py  pyproject.toml  requirements.txt
config/: asgi.py  settings.py  urls.py  wsgi.py
daily_news/: admin.py  apps.py  content.py  mail.py  models.py  news.py  tests.py  urls.py  views.py
daily_news/migrations/: 0001_initial.py  0002_alter_topic_created_at.py  0002_topic_amount.py  0003_alter_topic_amount.py
daily_news/static/daily_news/: style.css
daily_news/templates/admin/: base_site.html
daily_news/templates/daily_news/: about.html  base.html  detail.html  home.html  index.html  topics.html
news/: apps.py  tests.py  urls.py  views.py
news/migrations/: 0001_initial.py  0002_alter_topic_created_at.py
news/services/: api_handler.py  url_builder.py
news/templates/news/: detail.html  index.html
news/tests/: test_models.py
news/tests/services/: test_api_handler.py  test_url_builder.py
users/: views.py
users/templates/users/: login.html  register.html
